tooling/nargo_cli/tests/snapshots/execution_success/cast_to_i8_regression_7776/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: Field, v1: Field):
    (no terminator instruction)
}
[cast_to_i8_regression_7776] Circuit output: 0
